--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^7.3.1
   flutter_offline: ^2.0.0
+  animated_text_kit: ^4.2.1
 
 dev_dependencies:
   
